# cpp

./: Dockerfile
project/: CMakeLists.txt
project/src/: main.cpp
